[package]
name = "pumpfun-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["solana", "rust", "defi", "pumpfun", "raydium"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[dependencies]
solana-client = "=1.18.25"
solana-sdk = "=1.18.25"
solana-program = "=1.18.25"

spl-associated-token-account = "*"
spl-token = "*"

borsh = "~1"
serde_json = "~1"
serde = { version = "~1", features = ["derive"] }
log = "~0"

[dev-dependencies]
dotenvy = "~0"
tokio = { version = "~1", features = ["full"] }
